<?xml version="1.0" encoding="utf-8"?>

<!-- Vue de l'activité permettant de rechercher le jour de la semaine à partir
     d'une date
     fichier activite_jour_semaine.xml-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cours.android.calculdate.ActiviteJourSemaine">

    <!--  2 TextView pour présenter l'activité -->
    <TextView
        style="@style/TitreActivite"
        android:text="@string/label_intro_jour1" />

    <TextView
        style="@style/StyleTexteSousTitre"
        android:text="@string/label_intro_jour2" />

    <!-- barre horizontale de séparation -->
    <View
        style="@style/BarreSeparation"/>

    <!--  pour saisir la date à  traiter -->
    <DatePicker
        style="@style/StyleDatePicker"
        android:id="@+id/selecteurDate" />

    <!--  Ligne contenant les 3 boutons : retour, raz, rechercher -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            style="@style/StyleBouton"
            android:text="@string/bouton_retour"
            android:onClick="clicRetour" />
        <Button
            style="@style/StyleBouton"
            android:text="@string/bouton_raz"
            android:onClick="clicRaz" />
        <Button
            style="@style/StyleBouton"
            android:text="@string/bouton_rechercher"
            android:onClick="clicRechercherJour" />
    </LinearLayout>

    <!-- barre horizontale de séparation -->
    <View
        style="@style/BarreSeparation"/>

    <!--  pour afficher le résultat -->
    <TextView
        style="@style/StyleTexte"
        android:id="@+id/resultat_jour" />

</LinearLayout>


