<?xml version="1.0" encoding="utf-8"?>

<!-- Vue de l'activité permettant de rechercher le nombre de jours qui
     séparent 2 dates
     fichier activite_ecart_date.xml-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.cours.android.calculdate.ActiviteEcartDate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <!--  2 TextView pour présenter l'activité -->
        <TextView
            style="@style/TitreActivite"
            android:text="@string/label_intro_ecart1" />

        <TextView
            style="@style/StyleTexteSousTitre"
            android:text="@string/label_intro_ecart2" />

        <!-- barre horizontale de séparation -->
        <View
            style="@style/BarreSeparation"/>

        <!--  pour saisir les 2 dates à traiter -->
        <DatePicker
            style="@style/StyleDatePicker"
            android:id="@+id/selecteurDate1"
            android:layout_marginTop="-40dp"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <DatePicker
            style="@style/StyleDatePicker"
            android:id="@+id/selecteurDate2"
            android:layout_marginTop="-80dp"
            android:layout_marginBottom="-20dp"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <!--  Ligne contenant les 3 boutons : retour, raz, calculer -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                style="@style/StyleBouton"
                android:text="@string/bouton_retour"
                android:onClick="clicRetour" />
            <Button
                style="@style/StyleBouton"
                android:text="@string/bouton_raz"
                android:onClick="clicRaz" />
            <Button
                style="@style/StyleBouton"
                android:text="@string/bouton_rechercher"
                android:onClick="clicRechercherEcart" />
        </LinearLayout>

        <!-- barre horizontale de séparation -->
        <View
            style="@style/BarreSeparation"/>

        <!--  pour afficher le résultat -->
        <TextView
            style="@style/StyleTexte"
            android:id="@+id/resultat_ecart" />
    </LinearLayout>

</ScrollView>
