<?xml version="1.0" encoding="utf-8"?>

<!-- Vue de l'activité principale de l'application permettant d'effectuer des calculs
     sur les dates :
       - recherche du jour de la semaine à partir d'une date
       - nombre de jours qui séparent 2 dates
      fichier activity_main.xml-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.calculdate.MainActivity">

    <!-- titre de l'activité -->
    <TextView
        style="@style/TitreActivite"
        android:text="@string/message_bienvenue" />


    <!-- bouton de lancement de l'activité jour de la semaine-->
    <Button
        style="@style/StyleBouton"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/tres_grande_marge"
        android:onClick="clicJourSemaine"
        android:text="@string/bouton_jour_semaine"/>

    <!-- bouton de lancement de l'activité écart entre 2 dates-->
    <Button
        style="@style/StyleBouton"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/tres_grande_marge"
        android:layout_marginBottom="@dimen/tres_grande_marge"
        android:onClick="clicEcartDate"
        android:text="@string/bouton_ecart"/>

    <View
        style="@style/BarreSeparation"/>


    <!-- message pour identifier l'activité lancée -->
    <TextView
        style="@style/StyleTexte"
        android:id="@+id/retour_activite" />


</LinearLayout>




